Add issue statistics and review contributions visualizations
- Add IssueStatistics component showing open/closed issues and PRs
- Add ReviewContributions component showing top reviewers and commenters
- Create collect-issue-data.sh script for gathering issue and review data
- Update GitHub Actions workflow to collect issue data
- Display monthly closed issues trends
- Show review activity insights

--- a/.github/workflows/update-data.yml
+++ b/.github/workflows/update-data.yml
@@ -40,7 +40,9 @@ jobs:
         run: |
           cd scripts
           chmod +x collect-pr-data.sh
+          chmod +x collect-issue-data.sh
           ./collect-pr-data.sh
+          ./collect-issue-data.sh
           
       - name: Run analysis scripts
         run: |
